ajout rectangle bleu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Structure HTML</p>
 
     <div class="carre">Carré</div>
+    <div class="rectangle">Rectangle</div>
 
     <script src="assets/js/app.js"></script>
 </body>
